unpackaged/main/default/objects/PaymentApprovalLimit__mdt/PaymentApprovalLimit__mdt.object-meta.xml
<CustomObject>
    <label>Payment Approval Limit</label>
    <pluralLabel>Payment Approval Limits</pluralLabel>
</CustomObject>