unpackaged/main/default/objects/PaymentApprovalLimit__mdt/fields/AbsenceReleaseLimit__c.field-meta.xml
<CustomField>
    <fullName>AbsenceReleaseLimit__c</fullName>
    <label>Absence Release Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>