unpackaged/main/default/objects/PaymentApprovalLimit__mdt/fields/DisabilityAdHocPaymentLimit__c.field-meta.xml
<CustomField>
    <fullName>DisabilityAdHocPaymentLimit__c</fullName>
    <label>Disability AdHoc Payment Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>