unpackaged/main/default/objects/PaymentApprovalLimit__mdt/fields/DisabilityRecurringPaymentsLimit__c.field-meta.xml
<CustomField>
    <fullName>DisabilityRecurringPaymentsLimit__c</fullName>
    <label>Disability Recurring Payments Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>