unpackaged/main/default/objects/PaymentApprovalLimit__mdt/fields/DisabilityReleaseLimitDays__c.field-meta.xml
<CustomField>
    <fullName>DisabilityReleaseLimitDays__c</fullName>
    <label>Disability Release Limit Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>