unpackaged/main/default/objects/PaymentApprovalLimit__mdt/fields/RoleName__c.field-meta.xml
<CustomField>
    <fullName>RoleName__c</fullName>
    <label>Role Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>