unpackaged/main/default/objects/PaymentApprovalLimit__mdt/fields/SupplementalReleaseLimitsAccident__c.field-meta.xml
<CustomField>
    <fullName>SupplementalReleaseLimitsAccident__c</fullName>
    <label>Supplemental Release Limits  (Accident)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>