unpackaged/main/default/objects/PaymentApprovalLimit__mdt/fields/SupplementalReleaseLimitsCritical__c.field-meta.xml
<CustomField>
    <fullName>SupplementalReleaseLimitsCritical__c</fullName>
    <label>Supplemental Release Limits  (Critical)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>